test/sema/example_13.colgm
func main() {
    var x = [0, 1, 2, 3];

    for i in 0..4 init(a = 1) {}

    var foo_1, foo_2 = for i in 0..4 init(a = 1, b = 2) {
        yield 0
    }

    var bar_1, bar_2 = for i in 0..4 init(a = 1, b = 2) {
        yield a + 1, 0.114
    }
}